[gd_scene load_steps=8 format=3 uid="uid://doinb8khk5dbv"]

[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_m4ye4"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_d5p12"]
[ext_resource type="Texture2D" uid="uid://dxksfw7owcjw1" path="res://graphics/enemies/enemyRanged/shoot/Armature_shoot_004.png" id="3_lmp7h"]
[ext_resource type="AudioStream" uid="uid://cr8174i3uin85" path="res://audio/organic_impact.mp3" id="4_pp23k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w3r0w"]
radius = 52.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rsk5i"]
shader = ExtResource("2_d5p12")
shader_parameter/color = Color(0.772549, 0, 0, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7u5je"]
radius = 645.078

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_m4ye4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 5)
shape = SubResource("CircleShape2D_w3r0w")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_rsk5i")
rotation = -1.5708
texture = ExtResource("3_lmp7h")
metadata/_edit_lock_ = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-7, -24)
shape = SubResource("CircleShape2D_7u5je")

[node name="LaserSpawnPositions" type="Node2D" parent="." groups=["Entity"]]
position = Vector2(-162, 25)
metadata/_edit_group_ = true

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(255, 5)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(241, 2)

[node name="Timers" type="Node" parent="."]

[node name="LaserCooldown" type="Timer" parent="Timers"]
autostart = true

[node name="HitCooldown" type="Timer" parent="Timers"]
wait_time = 0.3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pp23k")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="Timers/HitCooldown" to="." method="_on_hit_cooldown_timeout"]
